--- a/日程/2022/4月份工作记录.md
+++ b/日程/2022/4月份工作记录.md
@@ -6,3 +6,67 @@
 4. 完成 sql 工具包后端执行功能开发 @冯庚平 4.25
 5. 完成 sql 工具包前端开发 @冯庚平 4.30
 6. realtime 增加信鸿发送方式。根据 namespace 发送到不同的信鸿 webhook
+
+### 4-1
+
+1. sql 工具包需求澄清
+2. 告警接受改个 bug。ident 没有发给 n9e
+
+### 4-2
+
+1. 对接大数据的监控数据上报，画图
+2. 看下 sql 工具包的 model 设计
+   sql\_开头的表已经有了，之前做了一个 sql 任务。貌似没用起来
+
+### 4-11
+
+1. 测试 sql
+2. realtime 增加信鸿发送方式
+   fmp 增加一个接口，用来获取 sender 信息
+   写了一个脚本，用来刷新 sender 信息
+   realtime 改造，基本完成。还差从配置文件读 sender 信息。
+
+### 4-12
+
+1. realtime 改造需要大改一下
+
+- 新建一个 util 目录，把通用函数都挪过来
+- gslb 配置读取，存到了 GslbConf。但这个变量没有用到。
+  可是，GslbKeyValue 这个变量没有赋值，却有值，值应该是从 GslbConf 获取的。没有找到是怎么获取的
+  改好了。测试完成。原本想把读取配置文件抽象出来，发现之前写的东西，小区别太多，不好改，放弃了。
+
+### 4-15
+
+1. sql 工具包项目需求及设计评审
+2. 前端页面开发
+3. realtime 开发完成
+
+### 4-18
+
+1. sql 前端页面基本框架完成
+2. 明天需要开始做后端的接口。
+   工单状态的改变，不仅仅是 status 参数的修改。还有配套的逻辑
+   - 工单执行
+   - 工单中止
+   - 新建工单默认为待审核，如果是驳回，就是待提交。前端页面是一个文件，但是具体参数的修改还要加上，不好弄
+
+### 4-19
+
+1. 提交审核，撤回，驳回，
+
+### 4-20
+
+1. 后端状态变更逻辑都完成了。测试了撤回、驳回、审核、执行。
+2. 明天需要测中止。
+   另外，前端列表页的中止按钮还没有弄好
+   审核页需要把列表页的东西挪过来
+   还有保护措施。当工单状态为完成，就不允许再修改了
+
+### 4-22
+
+1. 在调整一下中止的返回值的存储，就全搞好了。然后全流程测试
+
+### 4-24
+
+1. 中止测完了。
+2. 搞全流程测试
