--- a/第三方开源组件/goInception/测试结论.md
+++ b/第三方开源组件/goInception/测试结论.md
@@ -18,3 +18,45 @@
 | 5        | CHECKED | 2           | Audit Completed | Select only star is not allowed. <br>Table 'yearning.user' doesn't exist.<br>Table 'yearning.user' doesn't exist. | select \* from user                        | 0             | 0_0_00000004 | None          | 0            | None    | 0           |
 
 第五行，表不存在报了 2 次。如果把\*去掉，就正常了。可能内部逻辑就是存在重复
+
+## 回滚需要设置 server_id
+
+| order_id | stage    | error_level | stage_status                                | error_message                                                             | sql                                        | affected_rows | sequence               | backup_dbname              | execute_time | sqlsha1 | backup_time |
+| -------- | -------- | ----------- | ------------------------------------------- | ------------------------------------------------------------------------- | ------------------------------------------ | ------------- | ---------------------- | -------------------------- | ------------ | ------- | ----------- |
+| 1        | EXECUTED | 0           | Execute Successfully                        | None                                                                      | create database yearning                   | 1             | 1648778892_10_00000000 | None                       | 0.010        | None    | 0           |
+| 2        | EXECUTED | 0           | Execute Successfully                        | None                                                                      | use yearning                               | 0             | 1648778892_10_00000001 | None                       | 0.000        | None    | 0           |
+| 3        | EXECUTED | 0           | Execute Successfully<br>Backup Successfully | None                                                                      | create table t1(id int primary key,c1 int) | 0             | 1648778892_10_00000002 | 10_18_216_65_3306_yearning | 0.010        | None    | 0           |
+| 4        | EXECUTED | 2           | Execute Successfully<br>Backup failed       | Backup: ERROR 1236 (HY000): Misconfigured master - server id was not set. | insert into t1(id,c1) values(1,1)          | 1             | 1648778892_10_00000003 | 10_18_216_65_3306_yearning | 0.002        | None    | 0           |
+
+## 存在上下文衔接问题
+
+创建表语句执行失败，后面插入数据的语句直接不执行了，看返回值应该是做了校验
+
+| order_id | stage   | error_level | stage_status    | error_message              | sql                                        | affected_rows | sequence     | backup_dbname | execute_time | sqlsha1 | backup_time |
+| -------- | ------- | ----------- | --------------- | -------------------------- | ------------------------------------------ | ------------- | ------------ | ------------- | ------------ | ------- | ----------- |
+| 1        | CHECKED | 2           | Audit Completed | 数据库'yearning'已存在.    | create database yearning                   | 0             | 0_0_00000000 | None          | 0            | None    | 0           |
+| 2        | CHECKED | 0           | Audit Completed | None                       | use yearning                               | 0             | 0_0_00000001 | None          | 0            | None    | 0           |
+| 3        | CHECKED | 2           | Audit Completed | Table 't1' already exists. | create table t1(id int primary key,c1 int) | 0             | 0_0_00000002 | None          | 0            | None    | 0           |
+| 4        | CHECKED | 0           | Audit Completed | None                       | insert into t1(id,c1) values(2,1)          | 1             | 0_0_00000003 | None          | 0            | None    | 0           |
+
+## 执行时，按条执行，只要有一条执行失败，后面的都会只做检查
+
+| order_id | stage   | error_level | stage_status    | error_message           | sql                               | affected_rows | sequence     | backup_dbname | execute_time | sqlsha1 | backup_time |
+| -------- | ------- | ----------- | --------------- | ----------------------- | --------------------------------- | ------------- | ------------ | ------------- | ------------ | ------- | ----------- |
+| 1        | CHECKED | 2           | Audit Completed | 数据库'yearning'已存在. | create database yearning          | 0             | 0_0_00000000 | None          | 0            | None    | 0           |
+| 2        | CHECKED | 0           | Audit Completed | None                    | use yearning                      | 0             | 0_0_00000001 | None          | 0            | None    | 0           |
+| 3        | CHECKED | 0           | Audit Completed | None                    | insert into t1(id,c1) values(2,1) | 1             | 0_0_00000002 | None          | 0            | None    | 0           |
+
+## 检查通过并不能确保执行成功
+
+这个表格的第 2 句、第三句都会执行失败。第二句主键冲突；第三句库已存在。
+
+| order_id | stage   | error_level | stage_status    | error_message | sql                               | affected_rows | sequence     | backup_dbname | execute_time | sqlsha1 | backup_time |
+| -------- | ------- | ----------- | --------------- | ------------- | --------------------------------- | ------------- | ------------ | ------------- | ------------ | ------- | ----------- |
+| 1        | CHECKED | 0           | Audit Completed | None          | use yearning                      | 0             | 0_0_00000000 | None          | 0            | None    | 0           |
+| 2        | CHECKED | 0           | Audit Completed | None          | insert into t1(id,c1) values(2,1) | 1             | 0_0_00000001 | None          | 0            | None    | 0           |
+| 3        | CHECKED | 0           | Audit Completed | None          | create database yaerning          | 0             | 0_0_00000002 | None          | 0            | None    | 0           |
+
+## 执行时是一条 sql 一条 sql 执行
+
+这里存在一个问题：如果一条 sql 改动的条数太多，就会很慢，且即使中断，他也要把这条 sql 执行完。这在实际使用中是存在问题的
