go signal and context

--- a/日程/2022/4月份工作记录.md
+++ b/日程/2022/4月份工作记录.md
@@ -70,3 +70,21 @@
 
 1. 中止测完了。
 2. 搞全流程测试
+
+### 4-25
+
+1. 在青岛机房搭了一套测试环境给开发试用
+2. migration 需要自己重新搞
+   一是有个 user 的 migrate 需要手动在数据库里面加上，0001_initial；
+   二是密码加密的 sql 需要自己手动跑，django 生成的一直有问题，varchar(None)里面应该是位数，而不是 None
+3. realtime 应用的下载接口，老是超时。今天在测试环境搞了一个，长时间跑跑看，能不能从日志抓点东西出来
+
+### 4-26
+
+1. 完善 sql 工具包。增加邮件发送
+
+### 4-29
+
+1. 接口统计邮件里每天都新增接口，实际上是没有拿到旧数据
+   问题定位没有找到原因，特地单独跑了一遍，问题消失了。放假回来再看看
+2. telegraf 接收 kafka 数据这个之前调研结束，今天做成镜像部署到线上去
