telegraf 自研input plugin

--- a/业务/海外监控系统设计/总体框架.md
+++ b/业务/海外监控系统设计/总体框架.md
@@ -14,6 +14,7 @@ GRAFANA[画图-grafana]
 N9E[夜莺]
 STORAGE[存储方案]
 TELEGRAF[监控数据采集-telegraf]
+MONITOR_CATEGORY[监控配置组件]
 
 LDAP--提供鉴权-->CMDB
 LDAP--提供鉴权-->FMP
@@ -21,11 +22,12 @@ LDAP--提供鉴权-->N9E
 LDAP--提供鉴权-->GRAFANA
 CMDB--采集数据-->AWS
 CMDB--采集数据-->K8S
+CMDB--采集数据-->MONITOR_CATEGORY
+MONITOR_CATEGORY--下发给-->TELEGRAF
 FMP--告警通道-->Hichat
 TELEGRAF--上报数据-->N9E
 N9E--推送-->STORAGE
 GRAFANA--取数据-->STORAGE
-CMDB--生成采集配置-->TELEGRAF
 FMP--"推送告警策略(个性化策略)"-->N9E
 N9E--webhook推送告警事件-->FMP
 ```
@@ -173,3 +175,57 @@ git 废掉，搞个下载接口
 2. 还有，这个问题原来就存在，当时没有想到
    原来是 cmdb 生成采集配置，现在 cmdb 有一份服务列表，fmp 有一份监控采集项列表，这两份要合并起来，才能全覆盖要采集的监控项。比方：kafka 在 cmdb，日志监控在 fmp，这就在两个地方了。如何合并
    ——这个问题讨论过了，fmp 有一套全的，直接从 fmp 拉
+
+## 四、工作任务列表
+
+### 1、完成 CMDB 关于获取 AWS 设备信息的功能
+
+这个原来有，现在要重构。可以参考一下
+
+### 2、开发一个监控配置组件
+
+功能：
+
+- 可以生成 telegraf 配置文件，并分发或者提供接口给各个 telegraf
+- 单独弄 telegraf 集中监控
+- 可以配置哪些 plugin 在哪些设备上执行
+- 可以配置个性化告警策略，并推送给夜莺——日志、接口、topic——拖
+- 从 cmdb 获取信息，生成配置文件——拖
+
+### 3、把国内 IDC 的告警策略同步到海外环境
+
+需要把 sql 整出来
+
+### 4、telegraf 改造——先做
+
+- 把夜莺 v4 的 agent 的功能，挪过来。
+
+### 5、ansible 分发 agent
+
+- agent 下发
+- plugin 下发
+- 配置下发
+
+### 6、云内服务搭建
+
+| 服务               | 资源                                             |
+| ------------------ | ------------------------------------------------ |
+| fmp                | 0.5C0.5G                                         |
+| fmp-web            | 0.5C0.5G                                         |
+| cmdb               | 1C1G                                             |
+| cmdb-web           | 0.5C0.5G                                         |
+| receiveAlarm       | 1C1G                                             |
+| telegraf 集中监控  | 0.5C0.5G 每类中间件一个：MySQL，redis、kafka、es |
+| VictoriaMetric     | 2C2G                                             |
+| vm-agent           | 1C1G                                             |
+| grafana            | 1C1G                                             |
+| node-exporter      | 1C1G                                             |
+| kubesystem-metrics | 1C1G                                             |
+| ldap               | 1C1G GFS                                         |
+| nginx              | 1C1G                                             |
+| n9e-v5 webapi      | 1C1G                                             |
+| n9e-v5 server-api  | 3C3G                                             |
+| 中控机             | 4C8G                                             |
+| realtime           | 1C1G ——看接口数量                                |
+
+- harbor 上占用一部分存储，放监控数据——vm-storage（云外）
