--- a/日程/2022/5月份工作记录.md
+++ b/日程/2022/5月份工作记录.md
@@ -30,4 +30,9 @@
    这个数据，发送到 opentsdb 就会变成
    {"metric": "配置文件定义的内容\_value", "metric": "aa"}
    追加了"\_value"，并且原来 metric 这个关键字变成了一个 tag 的 key。
-   这个问题，通过修改源码搞定了。需要注意的是，telegraf 配置文件里面 name_override 这个重定义 metric 的配置，必须以 "selfmetric\_"开头，这样才能识别，并去掉前缀。
+   这个问题，通过修改源码搞定了。需要注意的是，telegraf 配置文件 input 项里面 name_override 这个重定义 metric 的配置，必须以 "selfmetric\_"开头，这样才能识别，并去掉前缀。
+
+### 5-23
+
+1. telegraf 改造基本完成
+   明天要检查 opentsdb 输出的时候，已经去掉前缀了，但是反而不好用了
