--- a/业务/容器云/打包问题.md
+++ b/业务/容器云/打包问题.md
@@ -1,2 +1,28 @@
 编译语言打镜像包的时候，需要把编译完成的程序复制进镜像。这时，镜像内自带的 lib 库就需要全，不然编译用到的一些库没有，程序就不能正常运行。
 要么编译的时候，把需要的库全都打包进去，要么基础镜像包的库就得全
+
+### 如何将某个镜像从线上 harbor 仓库(192.168.29.15:40080)推送至预上线 harbor 仓库(192.168.30.92:40080)？
+
+线上 harbor 执行：pull 一个镜像到本地
+docker pull 192.168.29.15:40080/bigdata-tenant--recsys-repo-release-3.5.1/nacos-server:2.0.2
+
+在线上 harbor 仓库上执行 docker save 将镜像保存至本地
+docker save 192.168.29.15:40080/bigdata-tenant--recsys-repo-release-3.5.1/nacos-server:2.0.2 |xz -zv > nacos-server.tar.xz
+
+拷贝至预上线 harbor 的 home 目录下：
+scp nacos-server.tar.xz 192.168.30.92:/home/
+登录预上线 harbor 环境对应目录下：
+docker load -i nacos-server.tar.xz
+grep 看一下：
+docker images | grep nacos
+
+### 推送镜像
+
+在本地 docker 环境(即预上线 harbor)中输入以下命令进行登录：
+docker login 192.168.30.92:40080 -u admin -p '#y$gMOko5Nhitv@'
+
+对镜像进行标记：
+docker tag 192.168.29.15:40080/bigdata-tenant--recsys-repo-release-3.5.1/nacos-server:2.0.2 192.168.30.92:40080/yunti-tenant--yunti-repo/nacos-server:2.0.2
+
+推送镜像：
+docker push 192.168.30.92:40080/yunti-tenant--yunti-repo/nacos-server:2.0.2
