--- a/业务/海外监控系统设计/总体框架.md
+++ b/业务/海外监控系统设计/总体框架.md
@@ -199,6 +199,7 @@ git 废掉，搞个下载接口
 ### 4、telegraf 改造——先做
 
 - 把夜莺 v4 的 agent 的功能，挪过来。
+  这个在本地缓存里面留一份，缓存时间 10 分钟。超过 10 分钟，从 server 端拉取新的，并更新缓存。
 
 ### 5、ansible 分发 agent
 
