--- a/日程/2022/5月份工作记录.md
+++ b/日程/2022/5月份工作记录.md
@@ -36,3 +36,14 @@
 
 1. telegraf 改造基本完成
    明天要检查 opentsdb 输出的时候，已经去掉前缀了，但是反而不好用了
+
+### 5-27
+
+1. telegraf 改造完成
+
+- input 采集数据
+- output 发送数据
+- input 从 server 获取脚本执行策略
+
+2. 下周要解决从 telegraf 获取 hostname 失败的问题
+
